<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.socialhazard.app.ui.splash.SplashFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_splashFragment_to_profileSetupFragment"
            app:destination="@id/profileSetupFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profileSetupFragment"
        android:name="com.socialhazard.app.ui.profile.ProfileSetupFragment"
        android:label="@string/profile_setup_title">
        <action
            android:id="@+id/action_profileSetupFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/profileSetupFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.socialhazard.app.ui.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_roomEntryFragment"
            app:destination="@id/roomEntryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/roomEntryFragment"
        android:name="com.socialhazard.app.ui.room.RoomEntryFragment"
        android:label="@string/create_room">
        <action
            android:id="@+id/action_roomEntryFragment_to_lobbyFragment"
            app:destination="@id/lobbyFragment" />
    </fragment>

    <fragment
        android:id="@+id/lobbyFragment"
        android:name="com.socialhazard.app.ui.lobby.LobbyFragment"
        android:label="@string/lobby_players">
        <action
            android:id="@+id/action_lobbyFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_lobbyFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.socialhazard.app.ui.game.GameFragment"
        android:label="@string/game_prompt">
        <action
            android:id="@+id/action_gameFragment_to_judgeFragment"
            app:destination="@id/judgeFragment" />
    </fragment>

    <fragment
        android:id="@+id/judgeFragment"
        android:name="com.socialhazard.app.ui.judge.JudgeFragment"
        android:label="@string/judge_prompt">
        <action
            android:id="@+id/action_judgeFragment_to_roundResultFragment"
            app:destination="@id/roundResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/roundResultFragment"
        android:name="com.socialhazard.app.ui.result.RoundResultFragment"
        android:label="@string/result_title">
        <action
            android:id="@+id/action_roundResultFragment_to_finalScoreboardFragment"
            app:destination="@id/finalScoreboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/finalScoreboardFragment"
        android:name="com.socialhazard.app.ui.scoreboard.FinalScoreboardFragment"
        android:label="@string/scoreboard_title">
        <action
            android:id="@+id/action_finalScoreboardFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.socialhazard.app.ui.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_demoModeFragment"
            app:destination="@id/demoModeFragment" />
    </fragment>

    <fragment
        android:id="@+id/demoModeFragment"
        android:name="com.socialhazard.app.ui.demo.DemoModeFragment"
        android:label="@string/demo_title">
        <action
            android:id="@+id/action_demoModeFragment_to_lobbyFragment"
            app:destination="@id/lobbyFragment" />
        <action
            android:id="@+id/action_demoModeFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_demoModeFragment_to_judgeFragment"
            app:destination="@id/judgeFragment" />
        <action
            android:id="@+id/action_demoModeFragment_to_roundResultFragment"
            app:destination="@id/roundResultFragment" />
        <action
            android:id="@+id/action_demoModeFragment_to_finalScoreboardFragment"
            app:destination="@id/finalScoreboardFragment" />
    </fragment>

</navigation>
